# harness-kit

./: .gitattributes  .gitignore  .landmark.yml  AGENTS.md  CHANGELOG.md  CLAUDE.md  CODEBASE.md  Cargo.toml  HIT-LIST.md  LICENSE  README.md  VISION.md  anatomy-of-an-agent-harness.md  bootstrap.sh  dagger.json  deny.toml  index.yaml  loop-engineering.md  project.md  registry.yaml
.codex/: config.toml
.githooks/: post-commit  post-merge  post-rewrite  pre-commit  pre-merge-commit  pre-push  test_pre_merge_commit.sh
.groom/: audit-baseline-2026-06-02.txt  review-scores.ndjson
.harness-kit/: agents.yaml  bundles.yaml  factory-mcps.yaml
.omp/: README.md  RULES.md
.pi/: persona.md
.spellbook/: agents.yaml  repo-brief.md
backlog.d/: 025-dagger-merge-gate.md  031-harness-auto-tune-gepa.md  048-code-review-pattern-catalog-convention.md  049-bounded-payload-discipline-reference.md  051-agents-md-three-layer-restructure.md  052-harness-kit-config-contract.md  052-spellbook-config-contract.md  (+82 more)
ci/: pyproject.toml
ci/src/harness_kit_ci/: main.py
ci/src/spellbook_ci/: __init__.py  main.py
ci/tests/: test_agent_roster.py  test_evidence_blocks.py  test_frontmatter.py  test_heal_support.py  test_reference_quality.py  test_reflect_checkpoint.py  test_self_healing.py  test_skillify_classify.py  test_skillify_crud.py  test_skillify_parse_transcript.py  test_transcript_effectiveness_mining.py
crates/harness-kit-checks/: BOUNDARIES.md  Cargo.toml
crates/harness-kit-checks/baselines/: godfiles.txt
crates/harness-kit-checks/src/: agent_readiness_profile.rs  agent_roster.rs  agent_transcript.rs  autoreview.rs  backlog.rs  bench_map.rs  bootstrap.rs  bootstrap_agent_allowlist.rs  bundles.rs  check_agent_roster.rs  ci_check.rs  claude_hooks.rs  claude_settings.rs  cli_install.rs  cli_usage.rs  codex_execpolicy.rs  config_loader.rs  critique_eval.rs  design_eval.rs  detect_ui_surfaces.rs  docs_site.rs  embeddings.rs  error_report.rs  eval_coverage.rs  eval_graders.rs  events.rs  evidence.rs  evidence_blocks.rs  external_skill_lint.rs  external_sync.rs  external_sync_git.rs  external_sync_tests.rs  factory_mcp_materializer.rs  frontmatter.rs  generate_index.rs  git_hooks.rs  heal_commit.rs  heal_support.rs  lib.rs  lint_gates.rs  (+32 more)
crates/harness-kit-checks/tests/fixtures/: delegation-receipt.jsonl  lane-card.md
crates/harness-kit-hooks/: Cargo.toml
crates/harness-kit-hooks/src/: claude_hooks.rs  lib.rs  secret_redaction.rs  secrets_guard.rs
(+699 files in other folders)
