[package]
name = "harness-kit-hooks"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
anyhow = "1.0.98"
chrono = { version = "0.4.41", default-features = false, features = ["clock"] }
libc = "0.2.186"
regex = "1.11.1"
serde_json = "1.0.140"
tempfile = "3.20.0"
wait-timeout = "0.2.1"
